remove spotify lib